# doc-refinery-agent

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  analyze_pages_27_29.py  demo.py  main.py  pyproject.toml  query_refinery.py  run_4stage_demo.py  run_demo.py  run_full_batch.py  run_interactive_demo.py  run_refinery.py
.refinery/: extraction_ledger.jsonl  phase0_corpus_report.md  phase0_corpus_summary.csv  phase0_pdfplumber_metrics.csv  processing_summary.csv
docs/: DOMAIN_NOTES.md
output/refined/refined_audit/: refined_audit_report_-_2023_pt_1.md  refined_audit_report_-_2023_pt_10.md  refined_audit_report_-_2023_pt_2.md  refined_audit_report_-_2023_pt_3.md  refined_audit_report_-_2023_pt_4.md  refined_audit_report_-_2023_pt_5.md  refined_audit_report_-_2023_pt_6.md  (+3 more)
research/: auto_chunker.py  benchmark_docling.py  generate_ledger_from_summary.py  quality_checker.py  query_refinery.py  split_pdf.py  test.py
rubric/: extraction_rules.yaml
src/agents/: audit.py  chunker.py  document_analyzer.py  domain_classifier.py  extractor.py  fact_table.py  indexer.py  query_agent.py  summary_generator.py  triage.py
src/chunker/: page_index.py  semantic_chunker.py
src/evaluation/: metrics.py
src/graph/: nodes.py  state.py  workflow.py
src/indexer/: chroma_indexer.py
src/models/: schemas.py
src/strategies/: base.py  fast_text.py  layout_aware.py  router.py  vision_ocr.py
src/utils/: __init__.py  config_tracker.py  ocr_postprocess.py
src/vector_store/: vector_db.py
tests/: test_escalation.py  test_phase2.py  test_triage.py
(+39 files in other folders)
