[project]
name = "doc-refinery-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.2",
    "docling>=2.75.0",
    "hf-xet>=1.3.2",
    "lancedb>=0.29.2",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
