[project]
name = "doc-refinery-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "camelot-py[cv]>=0.9.0",
    "chromadb>=1.5.2",
    "docling>=2.75.0",
    "hf-xet>=1.3.2",
    "lancedb>=0.29.2",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "loguru>=0.7.3",
    "openai>=2.26.0",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.2.3",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
